--- a/readme.ipynb
+++ b/readme.ipynb
@@ -10,12 +10,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "README\n"
      ]
     }
    ],
    "source": [
-    "print('hello world')"
+    "print('README')"
    ]
   },
   {
