--- a/readme.ipynb
+++ b/readme.ipynb
@@ -27,12 +27,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "52350c93",
+   "metadata": {},
+   "source": [
+    "# If you open this from gesis, please run the command blow, then it will be the same as what you will see in Jupyterhub 4Cat"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "de791638-95bf-401b-9594-b2c4af40a142",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!export -p | grep JUPYTERHUB_CLIENT_ID > userinfo.txt;(echo \"import os;os.system('mkdir general_functions;cd general_functions;curl -L -O -J -H \\\"X-Dataverse-key:6ada60dc-67d1-47bb-b42a-95c2aff91929\\\" http://nfdirepo.fokus.fraunhofer.de/api/access/dataset/48'+';unzip dataverse_files.zip;rm dataverse_files.zip')\") > test2.py;python3 test2.py;rm userinfo.txt;rm test2.py;wget -nc https://raw.githubusercontent.com/SchenbergZY/jupyterhub-templates/master/tempyue/readme.ipynb;wget -nc https://raw.githubusercontent.com/SchenbergZY/jupyterhub-templates/master/tempyue/download_data_doi.ipynb"
+   ]
   }
  ],
  "metadata": {
@@ -51,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
